functional configurable batching

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,9 +1,12 @@
-[test]
+[batch]
 
-some_key=42
-string_example="Hello World!"
-a_vector=Vector3( 1, 0, 2 )
-
-[audio]
-
-mute=false
+runs=2
+types=[ "diversity", "volatility", "frugality", "liberality" ]
+diversity=[ 3, 5, 1 ]
+volatility=[ 10, 10, 1 ]
+frugality=[ 0, 100, 20 ]
+liberality=[ 0, 100, 20 ]
+orig_diversity=3
+orig_volatility=10
+orig_frugality=100
+orig_liberality=100
