--- a/settings.cfg
+++ b/settings.cfg
@@ -1,12 +1,18 @@
 [batch]
 
-runs=2
+runs=10
 types=[ "diversity", "volatility", "frugality", "liberality" ]
 diversity=[ 3, 5, 1 ]
 volatility=[ 10, 10, 1 ]
 frugality=[ 0, 100, 20 ]
 liberality=[ 0, 100, 20 ]
+poor=[ 0, 50, 10 ]
+rich=[ 0, 50, 10 ]
+spec=[ 0, 50, 10 ]
 orig_diversity=3
 orig_volatility=10
 orig_frugality=100
 orig_liberality=100
+orig_poor=5
+orig_rich=5
+orig_spec=5
