Some minor changes, added readme

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,6 +1,6 @@
 [batch]
 
-runs=10
+runs=20
 types=[ "diversity", "volatility", "frugality", "liberality" ]
 diversity=[ 3, 5, 1 ]
 volatility=[ 10, 10, 1 ]
@@ -12,7 +12,8 @@ spec=[ 0, 50, 10 ]
 orig_diversity=3
 orig_volatility=10
 orig_frugality=100
-orig_liberality=100
-orig_poor=5
-orig_rich=5
-orig_spec=5
+orig_liberality=0
+orig_poor=10
+orig_rich=10
+orig_spec=10
+orig_stan=20
